disabled edit and delete buttons

--- a/partials/assessment-form.html
+++ b/partials/assessment-form.html
@@ -62,6 +62,6 @@
 			</div>
 		</div>
 	</div>
-		<button type="button" class="btn btn-outline-primary" ng-click="addAssessment()">{{buttonText}}</button>
+		<button type="button" class="btn btn-outline-primary" ng-click="addAssessment()" disabled>{{buttonText}}</button>
 
 </div>
