--- a/partials/student-form.html
+++ b/partials/student-form.html
@@ -25,7 +25,7 @@
 					<input type="text" id="input-last-name" ng-model="newStudentObj.lastName">
 				</label>
 			</div>
-			<button type="button" class="btn btn-outline-primary" ng-click="addStudent()">{{buttonText}}</button>
+			<button type="button" class="btn btn-outline-primary" ng-click="addStudent()" disabled>{{buttonText}}</button>
 		</form>
 	</div>
 </div>
