--- a/partials/assessment-overview.html
+++ b/partials/assessment-overview.html
@@ -36,8 +36,8 @@
 					<td>{{assessment.displayDate}}</td>
 					<td>{{assessment.average}}</td>
 					<td>
-						<button class="btn btn-secondary btn-sm" ng-click="editAssessment(assessment.id)">Edit</button>
-						<button class="btn btn-danger btn-sm" ng-click="deleteAssessment(assessment.id)">Delete</button>
+						<button class="btn btn-secondary btn-sm" ng-click="editAssessment(assessment.id)" disabled>Edit</button>
+						<button class="btn btn-danger btn-sm" ng-click="deleteAssessment(assessment.id)" disabled>Delete</button>
 					</td>
 				</tr>
 			</tbody>
