--- a/partials/assessment-scoring-form.html
+++ b/partials/assessment-scoring-form.html
@@ -18,7 +18,7 @@
 			<p><strong>Date Assigned: {{assessment.displayDate}}</strong></p>
 		</div>
 		<div class="col-6">
-			
+
 		</div>
 	</div>
 	<div class="row assessments">
@@ -42,7 +42,7 @@
 			</ul>
 		</div>
 		<div class="col-12">
-			<button type="button" class="btn btn-outline-primary" ng-click="saveAssessment(assessment)">Save Assessment</button>
+			<button type="button" class="btn btn-outline-primary" ng-click="saveAssessment(assessment)" disabled>Save Assessment</button>
 		</div>
 	</div>
 
