--- a/partials/register.html
+++ b/partials/register.html
@@ -12,7 +12,7 @@
 
 
 	    <p class="lead center">
-	    	<a class="btn btn-primary btn-lg" href="#" role="button" ng-click="register()">Register</a>
+	    	<a class="btn btn-primary btn-lg" href="#" role="button" ng-click="register()" disabled>Register</a>
 	    	<a class="btn btn-primary btn-lg" href="#" role="button" ng-click="login()">Login</a>
 	    </p>
 	</div>
