--- a/partials/student-overview.html
+++ b/partials/student-overview.html
@@ -22,13 +22,11 @@
 					<strong>
 						{{student.firstName}} {{student.lastName}} <br>
 					</strong>
-					<button class="btn btn-outline-danger btn-sm" ng-click="deleteStudent(student.id)">Delete</button>
-					<button class="btn btn-outline-secondary btn-sm" ng-click="editStudent(student.id)">Edit</button>
+					<button class="btn btn-outline-danger btn-sm" ng-click="deleteStudent(student.id)" disabled>Delete</button>
+					<button class="btn btn-outline-secondary btn-sm" ng-click="editStudent(student.id)" disabled>Edit</button>
 					<hr>
 				</p>
 			</div>
 		</div>
 	</div>
 </div>
-
-
