--- a/partials/splash.html
+++ b/partials/splash.html
@@ -3,7 +3,7 @@
 	    <h1 class="display-3">Scoring</h1>
 	    <hr class="my-4">
 	    <p class="lead float-right">
-	    	<a class="btn btn-primary btn-lg splash-btn" ng-href="#!/register-login" role="button">Sign In</a>
+	    	<a class="btn btn-primary btn-lg splash-btn" ng-href="#!/intro" role="button">View Demo</a>
 	    </p>
 	</div>
 </div>
